IF else ani switch

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         </nav>
     </div>
     </div>
+    <p id="word">Enter Your Name: </p>
     <input id="input" type="text">
-    <button type="submit"></button>
+    <button id="button" type="submit"></button>
 </body>
 <script src="./script/script.js"></script>
 </html>
